<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="reset_errors" Id="{7618a898-199c-40c8-b33c-864350276044}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK PUBLIC reset_errors
VAR
	 bStart          : BOOL := TRUE;
	 fbTimer         : TON;
	 fbTrigger       : R_TRIG;
	 tTimerValue     : TIME := T#1S;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[GVL.robotdata.motorCword[0]:=128;
GVL.robotdata.motorCword[1]:=128;
GVL.robotdata.motorCword[2]:=128;
GVL.robotdata.motorCword[3]:=128;
fbTimer(IN := bStart, PT := tTimerValue);
motion_index:=max_location;
robotdata.motion_status:=MOTION_ENDED;
robotdata.Position_Velocity.Locomotion_1_target_velocity:=0;
robotdata.Position_Velocity.Locomotion_2_target_velocity:=0;
robotdata.Position_Velocity.Lifter_target_position:=robotdata.Position_Velocity.Lifter_position_actual_value;
robotdata.Position_Velocity.Rotator_target_position:=robotdata.Position_Velocity.Rotator_position_actual_value;

st_command.command:=0;
robotdata.activecommand:=0;]]></ST>
    </Implementation>
    <LineIds Name="reset_errors">
      <LineId Id="10" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="55" Count="1" />
      <LineId Id="15" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="45" Count="2" />
      <LineId Id="44" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="35" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>